# toy_dfs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.clinerules/: best-practices-analysis.md  readme-maintenance.md  test-tasks.md
client/: CMakeLists.txt
client/include/: dfs_client.h
client/src/: dfs_client.cpp  main.cpp
coordinator/: CMakeLists.txt
coordinator/include/: coordinator_service_impl.h  metadata_store.h
coordinator/src/: coordinator_service_impl.cpp  main.cpp
datanode/: CMakeLists.txt
datanode/include/: datanode_config.h  datanode_service_impl.h  datanode_stub_wrapper.h  datanode_utils.h
datanode/src/: datanode_config.cpp  datanode_service_impl.cpp  datanode_stub_wrapper.cpp  datanode_utils.cpp  main.cpp
proto/coordinator/: coordinator.proto
proto/datanode/: datanode.proto
server/: CMakeLists.txt
server/include/: datanode_server.h  dfs_server.h
server/src/: datanode_server.cpp
test/: CMakeLists.txt  run_test_and_parse.py  test_coordinator_service[1]_include.cmake  test_datanode_service[1]_include.cmake  test_integration[1]_include.cmake  test_metadata_store[1]_include.cmake
test/include/: mock_datanode_client.h
test/src/: system_test.cpp  test_coordinator_service.cpp  test_datanode_service.cpp  test_integration.cpp  test_metadata_store.cpp
